In mobile view fixed gap between images and in fullscreen fixed margin between header and images

--- a/_sass/components/_events.scss
+++ b/_sass/components/_events.scss
@@ -247,9 +247,11 @@
   text-align: center;
 
   @media #{$bp-below-tablet} {
-    margin: 0 auto 4px auto;         
+    margin: 0 auto 24px auto;         
     width: 100%;
-	height: 100%;
+	height: min-content;
+	display: flex;
+	justify-content: center;
   }
 
 }
@@ -278,12 +280,12 @@
   display: flex;
   justify-content:center;
   flex-wrap:wrap;
-  margin-top: 45px;
+  margin-top: 48px;
   align-content: center;
 
   @media #{$bp-below-tablet} {
     flex-direction: column;
-    height: fit-content;
+    height: min-content;
 	text-align: center;
 	margin-right: 16px; 
 	margin-left: 16px; 
